syntax = "proto2";

package Zko;

import "./math.proto";

message ZkRefSkeleton {
  required string type = 1;
  required string refId = 2;
  required bool isReference = 3;

  optional ZkSkeleton skeleton = 7;
}

message ZkSkeleton {
  required string refId = 1;
  required string name = 2;

  required ZkTransform transform = 3;

  optional ZkBone root = 101;
}

message ZkBone {
  required string id = 1;
  required string name = 2;
  required uint32 idx = 3;
  required ZkTransform transform = 4;
  repeated ZkBone children = 5;
}

message ZkJoint {
  required string id = 1;
  required string name = 2;

  required ZkTransform transform = 3;

  required ZkBone bone = 4;
}
